# drf_vjsf

./: README.rst  pyproject.toml
demo/app/: mixins.py  serializers.py  views.py
demo/app/templates/: vue_form.html
demo/demo/: settings.py
drf_vjsf/: __init__.py  converters.py
